k8s/istio/1.istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
# 对应转发规则
metadata:
  name: apiserver
spec:
  gateways:
    - apiserver
  hosts:
    - apiserver.jiac.online
  http:
    - match:
        - port: 80  # 1.如果你要转发到80端口，则转发到下面的service
      route:
        - destination:
            host: web.default.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: apiserver
  ## Gateway 对应 listener
spec:
  selector:
    istio: ingressgateway # 往带有这个标签的 ingress po加入下面的规则
  servers:
    - hosts:
        - apiserver.jiac.online
      port:
        name: http-apiserver
        number: 80
        protocol: HTTP
